# nix-eval-jobs-python

./: .gitignore  README.md  default.nix  flake.nix  pyproject.toml
nix_eval_jobs/: __main__.py  extra_types.py  logger.py
nix_eval_jobs/cmd/: main.py
nix_eval_jobs/nix/: utilities.py
nix_eval_jobs/nix/eval/: info.nix  info.py  raw.py  stats.py
